--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="light-bulb-container">
-        <img src="bulb2.png" alt="Light Bulb" id="lightBulb">
+   
+    <div >
+        <img src="bulb-off (1).png" alt="Light Bulb" id="lightBulb">
+        <button class="light-bulb-container ">click Me</button>
+    
     </div>
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
