--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    
     <div >
         <img src="bulb-off (1).png" alt="Light Bulb" id="lightBulb">
-        <button class="light-bulb-container ">click Me</button>
+        <button id="toggleButton" onclick="toggle()" class="light-bulb-container ">On</button>
     
     </div>
     
