--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    
     <div >
-        <img src="bulb-off (1).png" alt="Light Bulb" id="lightBulb">
+        <img src="bulb-off (1).png" width="200px" alt="Light Bulb" id="lightBulb">
         <button id="toggleButton" onclick="toggle()" class="light-bulb-container ">On</button>
     
     </div>
@@ -19,3 +19,5 @@
     
 </body>
 </html>
+
+
